--- a/package.json
+++ b/package.json
@@ -1,62 +1,62 @@
 {
-	"name": "Mesto",
-	"version": "0.0.1",
-	"description": "Project",
-	"main": "index.js",
-	"dependencies": {
-		"babel-polyfill": "^6.26.0",
-		"core-js": "^3.4.1",
-		"rimraf": "^3.0.2"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.12.1",
-		"@babel/core": "^7.12.3",
-		"@babel/plugin-proposal-class-properties": "^7.10.4",
-		"@babel/plugin-transform-arrow-functions": "^7.10.4",
-		"@babel/preset-env": "^7.12.1",
-		"autoprefixer": "^10.0.1",
-		"babel-loader": "^8.1.0",
-		"css-loader": "^4.3.0",
-		"cssnano": "^4.1.10",
-		"file-loader": "^6.1.1",
-		"gh-pages": "^3.1.0",
-		"html-loader": "^1.3.2",
-		"html-webpack-plugin": "^4.5.0",
-		"image-webpack-loader": "^7.0.1",
-		"mini-css-extract-plugin": "^0.11.3",
-		"postcss": "^8.1.1",
-		"postcss-loader": "^4.0.4",
-		"prettier": "2.1.2",
-		"style-loader": "^1.3.0",
-		"webpack": "^4.44.2",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0",
-		"webpack-md5-hash": "0.0.6"
-	},
-	"scripts": {
-		"build": "rimraf dist && webpack",
-		"dev": "webpack-dev-server --open --watch --hot",
-		"deploy": "gh-pages -d dist"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"**/*": "prettier --write --ignore-unknown"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Iuliia-Kirillova/mesto.git"
-	},
-	"keywords": [
-		"yandex_praktikum"
-	],
-	"author": "Iuliia-Kirillova",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/Iuliia-Kirillova/mesto/issues"
-	},
-	"homepage": "https://github.com/Iuliia-Kirillova/mesto"
+  "name": "Mesto",
+  "version": "0.0.1",
+  "description": "Project",
+  "main": "index.js",
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.6.5",
+    "rimraf": "^3.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-arrow-functions": "^7.10.4",
+    "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "image-webpack-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^0.11.3",
+    "postcss": "^8.1.1",
+    "postcss-loader": "^4.0.4",
+    "prettier": "2.1.2",
+    "style-loader": "^1.3.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-md5-hash": "0.0.6"
+  },
+  "scripts": {
+    "build": "rm -rf dist && webpack",
+    "dev": "webpack-dev-server --watch",
+    "deploy": "gh-pages -d dist"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Iuliia-Kirillova/mesto.git"
+  },
+  "keywords": [
+    "yandex_praktikum"
+  ],
+  "author": "Iuliia-Kirillova",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Iuliia-Kirillova/mesto/issues"
+  },
+  "homepage": "https://github.com/Iuliia-Kirillova/mesto"
 }
